cloud-native/traefik/dashboard-ingress.yaml
# kubernetes-dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.k8s.io`)
      kind: Rule
      services:
      - name: kubernetes-dashboard
        kind: Service
        port: 443
        serversTransport: kubernetes-dashboard-transport
---
# traefik dashboard
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik
spec:
  basicAuth:
    secret: traefik-dashboard-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.k8s.io`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
---
# flink dashboard
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: flink
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: flink.k8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flink-jobmanager-rest
                port:
                  number: 8081
